# ADJUTORIX

./: .gitignore  COPYRIGHT.md  LICENSE  README.md  package.json  pnpm-lock.yaml  setup.sh
.adjutorix/: actions.json
.adjutorix-audit/20260402-160331/: files.all.txt  git-branch.before.txt  git-head.before.txt  git-ls-files.txt  git-status.before.txt  hard-hotspots.txt  upstream-vs-local.diffstat.txt  upstream-vs-local.names.txt
.adjutorix-audit/20260402-204711-runtime-truth/: branch.txt  head.txt  health.json  job-status.json  ledger-current-method-not-found.json  patch-preview-method-not-found.json  transport-callers.txt  verify-status-method-not-found.json
.agent/: ledger.sqlite-shm  ledger.sqlite-wal
.reuse/: dep5
docs/: ADJUTORIX_GUIDED_MISSION_COMPOSER.md  ADJUTORIX_GUIDED_PRODUCT_EXPERIENCE.md  ADJUTORIX_IDE_WORKBENCH_POWERUP.md  ADJUTORIX_POWER_PACKAGE_PLANE.md  ADJUTORIX_PRODUCT_COMMAND_DECK.md  ADJUTORIX_REAL_POWER_WORKBENCH.md  ADJUTORIX_SINGLE_APPLICATION_BOUNDARY.md  NO_MERCY_CHECKLIST.md  architecture.md  engine.sqlite.v2.sql  protocol.md  security.md  troubleshooting.md
scripts/: health-probe.sh  list-package-scripts.sh  reset-agent-port.sh  smoke-job-run.sh  verify-capabilities.sh  verify-native-workbench-v10.sh  verify-native-workbench-v12.sh  verify-native-workbench-v13.sh  verify-native-workbench-v14.sh  verify-native-workbench-v15.sh  verify-native-workbench-v16.sh  verify-native-workbench-v17.sh  verify-native-workbench-v18.sh  verify-native-workbench-v9.sh  verify.sh
tests/fixtures/sample_repo_python/: README.md  pyproject.toml
(+448 files in other folders)
